--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
@@ -12,17 +12,17 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/tailwind": "^5.1.2",
-    "@eslint/js": "^9.13.0",
-    "astro": "^4.16.7",
-    "eslint": "^9.13.0",
-    "eslint-plugin-astro": "^1.3.0",
-    "globals": "^15.11.0",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.11.0",
-    "@astrojs/svelte": "^5.7.2",
-    "svelte": "^5.1.3"
+    "@astrojs/tailwind": "6.0.0",
+    "@eslint/js": "^9.21.0",
+    "astro": "5.3.0",
+    "eslint": "^9.21.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "globals": "^15.15.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.25.0",
+    "@astrojs/svelte": "7.0.4",
+    "svelte": "^5.20.5"
   },
   "overrides": {
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6"
